tests/agl/rejections/type/ctor_too_many_positional.agl
record R
  @std
  x: int
  y: int
let r = R(1, 2, 3)
print r.x
